--- a/spells.html
+++ b/spells.html
@@ -1,7 +1,4 @@
-from bs4 import BeautifulSoup
-from spell import Spell
-
-f = """<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en-US">
 <head>
 <meta charset="UTF-8">
@@ -131,7 +128,8 @@ f = """<!DOCTYPE html>
 				<a href="spells.php?player=Velmontarious">Velmontarious</a>
 				<a href="spells.php?player=Velthara">Velthara</a>
 				<a href="spells.php?player=Womaatoar">Womaatoar</a>
-	</header>
+			</div>
+		</header>
 	<div data-id="21" class="card alteration" data-school="Alteration" data-caster="wizard" >
 		<header class="clearfix">
 			<button class="level" data-clipboard-action="copy">1</button>
@@ -52101,50 +52099,4 @@ The material component is a jade circlet worth no less than 5,000 gp, which shat
 	</script>
 </body>
 </html>
-"""
-
-soup = BeautifulSoup(f, 'html.parser')
-spells = soup.find_all('div', attrs={'data-id' : True})
-
-# print(spells[0]['data-id'])
-
-spell_1 = Spell()
-spell_1.id = spells[0]['data-id']
-spell_1.school = spells[0]['data-school']
-spell_1.caster = spells[0]['data-caster']
-spell_1.level = int(spells[0].find('button', {'class' : 'level'}).text)
-spell_1.name = spells[0].find('div', {'class' : 'name'}).text
-spell_1.materials = spells[0].find('dd', {'class' : 'materials'}).text
-spell_1.range = spells[0].find('dd', {'class' : 'range'}).text
-spell_1.aoe = spells[0].find('dd', {'class' : 'aoe'}).text
-spell_1.casting_time = spells[0].find('dd', {'class' : 'castingTime'}).text
-spell_1.duration = spells[0].find('dd', {'class' : 'duration'}).text
-spell_1.save = spells[0].find('dd', {'class' : 'save'}).text
-spell_1.damage = spells[0].find('dd', {'class' : 'damage'}).text
-spell_1.description = spells[0].find('div', {'class' : 'description-content'}).text
-spell_1.residue = spells[0].find('dl', {'class' : 'label'}).text.split()[1]
-spell_1.source = spells[0].find_all('dl', {'class' : 'bot'})[1].text[7:]
-spell_1.somatic_comp = bool(spells[0].find('div', {'class' : 'somatic'}))
-spell_1.verbal_comp = bool(spells[0].find('div', {'class' : 'verbal'}))
-spell_1.material_comp = bool(spells[0].find('div', {'class' : 'material'}))
-
-
-print(spell_1.id)
-print(spell_1.name)
-print(spell_1.school)
-print(spell_1.verbal_comp)
-print(spell_1.somatic_comp)
-print(spell_1.material_comp)
-print(spell_1.materials)
-print(spell_1.range)
-print(spell_1.aoe)
-print(spell_1.casting_time)
-print(spell_1.duration)
-print(spell_1.save)
-print(spell_1.damage)
-print(spell_1.description)
-print(spell_1.level)
-print(spell_1.residue)
-print(spell_1.source)
-print(spell_1.caster)
 
